--- a/package.json
+++ b/package.json
@@ -9,13 +9,12 @@
     "@testing-library/jest-dom": "5.11.6",
     "@testing-library/react": "11.2.2",
     "@testing-library/user-event": "12.2.2",
-    "bootstrap": "4.5.3",
+    "bootstrap": "4.6.2",
     "chart.js": "2.9.4",
     "classnames": "2.2.6",
     "gulp": "4.0.2",
     "gulp-append-prepend": "1.0.8",
     "moment": "2.29.1",
-    "node-sass": "4.14.1",
     "node-sass-package-importer": "5.3.2",
     "nouislider": "14.6.3",
     "perfect-scrollbar": "1.5.0",
@@ -25,7 +24,8 @@
     "react-dom": "17.0.1",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.1",
-    "reactstrap": "8.7.1",
+    "reactstrap": "8.10.0",
+    "sass": "^1.69.5",
     "web-vitals": "1.0.1"
   },
   "optionalDependencies": {
