--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https:/riadhossain43.github.io/portfolio",
+  "homepage": "https://riadhossain43.github.io/portfolio",
   "name": "portfolio",
   "version": "1.2.0",
   "description": "",
