--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "5.0.1",
     "reactstrap": "8.10.0",
     "sass": "^1.69.5",
-    "web-vitals": "3.5.0"
+    "web-vitals": "3.5.0",
+    "yup": "^1.4.0"
   },
   "optionalDependencies": {
     "jquery": "3.7.1",
